added regex pattern to password input

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             name="confirm-password"
             id="confirm-password"
             placeholder="Confirm Password"
+            pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
             required
           />
         </div>
